# okx-hft-executor

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
accounting/: README.md  __init__.py  execution_quality.py  fee_engine.py  funding_engine.py  pnl_engine.py
app/: README.md  __init__.py  bootstrap.py  main.py  orchestrator.py  position_reconcile.py  position_state.py  strategy_manager.py
config/: README.md  __init__.py  limits.py  settings.py  strategies.example.yaml  strategies.yaml  strategy_config.py
control/: README.md  __init__.py  app.py  health.py  hooks.py
docs/: architecture.md  baseline_demo_mvp.md  baseline_measurement.md  control_api.md  deployment_cicd.md  deployment_hybrid.md  deployment_vps_runbook.md  getting_started.md  project_overview.md  project_structure.md  reconciliation.md  roadmap.md  runtime_modes.md  trade_lifecycle.md
domain/: README.md  __init__.py
exchange/: README.md  __init__.py  protocols.py
execution/: README.md  __init__.py  engine.py  exit_manager.py  order_manager.py  position_manager.py  reconciliation.py  state_machine.py  trade_finalize.py  trade_lifecycle.py
observability/: README.md  __init__.py  alerts.py  logging_config.py  metrics.py  tracing.py
persistence/: README.md  __init__.py  executor_store.py  postgres_journal.py  repositories.py  sqlite_store.py  storage_models.py  unit_of_work.py
risk/: README.md  __init__.py  guards.py  kill_switch.py  pre_trade.py  runtime.py
scripts/: apply_pg_migrations.py  (+2 more)
(+80 files in other folders)
