[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okx-hft-executor"
version = "0.1.0"
description = "Execution contour for HFT / algorithmic trading on OKX (scaffolding)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "okx-hft-executor maintainers" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]
control = [
    "uvicorn[standard]>=0.27",
    "fastapi>=0.110",
]

[project.scripts]
okx-hft-executor = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*",
    "config*",
    "domain*",
    "strategy*",
    "execution*",
    "risk*",
    "exchange*",
    "persistence*",
    "accounting*",
    "services*",
    "observability*",
    "control*",
]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
packages = [
    "app",
    "config",
    "domain",
    "strategy",
    "execution",
    "risk",
    "exchange",
    "persistence",
    "accounting",
    "services",
    "observability",
    "control",
]
strict = true
warn_unused_ignores = true
